fix(activity-log): add 10k direct export limit, protect formulas and update api docs