@@ -15,6 +15,8 @@ import java.time.Instant;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
@@ -25,6 +27,9 @@ import org.mockito.ArgumentCaptor;
 import org.mockito.InOrder;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.data.jpa.domain.Specification;
 
@@ -57,7 +62,7 @@ class ActivityLogExportServiceTest {
         organizationId = UUID.randomUUID();
         userId = UUID.randomUUID();
 
-        when(currentUser.getRoleCode()).thenReturn("VT-02");
+        lenient().when(currentUser.getRoleCode()).thenReturn("VT-02");
         lenient().when(currentUser.getOrganizationId()).thenReturn(organizationId);
     }
 
@@ -80,7 +85,7 @@ class ActivityLogExportServiceTest {
     }
 
     @Test
-    void exportCsv_shouldCreateFixedSchemaAndWriteAuditAfterSnapshot() {
+    void exportCsv_shouldUseBoundedPageableAndWriteAuditAfterSnapshot() {
         when(currentUser.getUserId()).thenReturn(userId);
         when(currentUser.getUsername()).thenReturn("manager");
         when(currentUser.getFullName()).thenReturn("Quản lý HTX");
@@ -98,8 +103,9 @@ class ActivityLogExportServiceTest {
                 .ipAddress("127.0.0.1")
                 .createdAt(LocalDateTime.of(2026, 9, 14, 9, 30))
                 .build();
-        when(activityLogRepository.findAll(any(Specification.class), any(Sort.class)))
-                .thenReturn(List.of(log));
+
+        when(activityLogRepository.findAll(any(Specification.class), any(Pageable.class)))
+                .thenReturn(new PageImpl<>(List.of(log)));
 
         byte[] result = service.exportCsv(ActivityLogExportFilterRequest.builder().build(), currentUser);
         String csv = new String(result, StandardCharsets.UTF_8);
@@ -107,6 +113,13 @@ class ActivityLogExportServiceTest {
         assertThat(csv).startsWith("\ufeffoccurredAt,actorName,actorUsername,actorRole,actionType,objectType,objectIdentifier,beforeValue,afterValue");
         assertThat(csv).contains("2026-09-14T09:30", "Nguyễn Văn A", "'=danger", "UPDATE_PRODUCTION_LOT");
         assertThat(csv).doesNotContain("127.0.0.1", "Nội dung nội bộ không được xuất");
+
+        ArgumentCaptor<Pageable> pageableCaptor = ArgumentCaptor.forClass(Pageable.class);
+        verify(activityLogRepository).findAll(any(Specification.class), pageableCaptor.capture());
+        Pageable capturedPageable = pageableCaptor.getValue();
+        assertThat(capturedPageable.getPageSize()).isEqualTo(ActivityLogExportServiceImpl.MAX_DIRECT_EXPORT_RECORDS + 1);
+        assertThat(capturedPageable.getPageNumber()).isZero();
+
         ArgumentCaptor<ActivityLog> auditCaptor = ArgumentCaptor.forClass(ActivityLog.class);
         verify(activityLogRepository).saveAndFlush(auditCaptor.capture());
         ActivityLog audit = auditCaptor.getValue();
@@ -115,14 +128,14 @@ class ActivityLogExportServiceTest {
         assertThat(audit.getDescription()).contains("recordCount=1", "status=SUCCESS");
 
         InOrder callOrder = inOrder(activityLogRepository);
-        callOrder.verify(activityLogRepository).findAll(any(Specification.class), any(Sort.class));
+        callOrder.verify(activityLogRepository).findAll(any(Specification.class), any(Pageable.class));
         callOrder.verify(activityLogRepository).saveAndFlush(audit);
     }
 
     @Test
     void exportCsv_shouldRejectEmptyResultWithoutWritingAudit() {
-        when(activityLogRepository.findAll(any(Specification.class), any(Sort.class)))
-                .thenReturn(List.of());
+        when(activityLogRepository.findAll(any(Specification.class), any(Pageable.class)))
+                .thenReturn(new PageImpl<>(Collections.emptyList()));
 
         assertThatThrownBy(() -> service.exportCsv(
                 ActivityLogExportFilterRequest.builder().build(),
@@ -131,6 +144,90 @@ class ActivityLogExportServiceTest {
                 .hasMessage("Không có nhật ký hoạt động trong phạm vi lọc.");
 
         verify(activityLogRepository, never()).saveAndFlush(any(ActivityLog.class));
+    }
+
+    @Test
+    void exportCsv_shouldRejectWhenCountExceedsMaxLimit_10001Records() {
+        List<ActivityLog> overLimitList = new ArrayList<>();
+        for (int i = 0; i <= ActivityLogExportServiceImpl.MAX_DIRECT_EXPORT_RECORDS; i++) {
+            overLimitList.add(ActivityLog.builder()
+                    .id(UUID.randomUUID())
+                    .organizationId(organizationId)
+                    .createdAt(LocalDateTime.now())
+                    .build());
+        }
+        assertThat(overLimitList).hasSize(10_001);
+
+        when(activityLogRepository.findAll(any(Specification.class), any(Pageable.class)))
+                .thenReturn(new PageImpl<>(overLimitList));
+
+        assertThatThrownBy(() -> service.exportCsv(
+                ActivityLogExportFilterRequest.builder().build(),
+                currentUser))
+                .isInstanceOf(BusinessException.class)
+                .hasMessage("Số lượng bản ghi vượt quá giới hạn xuất trực tiếp (tối đa 10.000 bản ghi). Vui lòng thu hẹp khoảng thời gian hoặc điều kiện lọc.");
+
+        verify(activityLogRepository, never()).saveAndFlush(any(ActivityLog.class));
+    }
+
+    @Test
+    void exportCsv_shouldSucceedWhenCountIsExactlyMaxLimit_10000Records() {
+        when(currentUser.getUserId()).thenReturn(userId);
+        when(currentUser.getUsername()).thenReturn("manager");
+        when(currentUser.getFullName()).thenReturn("Quản lý");
+
+        List<ActivityLog> exactlyMaxList = new ArrayList<>();
+        for (int i = 0; i < ActivityLogExportServiceImpl.MAX_DIRECT_EXPORT_RECORDS; i++) {
+            exactlyMaxList.add(ActivityLog.builder()
+                    .id(UUID.randomUUID())
+                    .organizationId(organizationId)
+                    .username("user" + i)
+                    .fullName("Tên " + i)
+                    .action("ACTION")
+                    .createdAt(LocalDateTime.now())
+                    .build());
+        }
+        assertThat(exactlyMaxList).hasSize(10_000);
+
+        when(activityLogRepository.findAll(any(Specification.class), any(Pageable.class)))
+                .thenReturn(new PageImpl<>(exactlyMaxList));
+
+        byte[] result = service.exportCsv(ActivityLogExportFilterRequest.builder().build(), currentUser);
+        assertThat(result).isNotNull().isNotEmpty();
+
+        ArgumentCaptor<ActivityLog> auditCaptor = ArgumentCaptor.forClass(ActivityLog.class);
+        verify(activityLogRepository).saveAndFlush(auditCaptor.capture());
+        assertThat(auditCaptor.getValue().getDescription()).contains("recordCount=10000");
+    }
+
+    @Test
+    void exportCsv_shouldSucceedWhenCountIsUnderLimit_9999Records() {
+        when(currentUser.getUserId()).thenReturn(userId);
+        when(currentUser.getUsername()).thenReturn("manager");
+        when(currentUser.getFullName()).thenReturn("Quản lý");
+
+        List<ActivityLog> underLimitList = new ArrayList<>();
+        for (int i = 0; i < 9_999; i++) {
+            underLimitList.add(ActivityLog.builder()
+                    .id(UUID.randomUUID())
+                    .organizationId(organizationId)
+                    .username("user" + i)
+                    .fullName("Tên " + i)
+                    .action("ACTION")
+                    .createdAt(LocalDateTime.now())
+                    .build());
+        }
+        assertThat(underLimitList).hasSize(9_999);
+
+        when(activityLogRepository.findAll(any(Specification.class), any(Pageable.class)))
+                .thenReturn(new PageImpl<>(underLimitList));
+
+        byte[] result = service.exportCsv(ActivityLogExportFilterRequest.builder().build(), currentUser);
+        assertThat(result).isNotNull().isNotEmpty();
+
+        ArgumentCaptor<ActivityLog> auditCaptor = ArgumentCaptor.forClass(ActivityLog.class);
+        verify(activityLogRepository).saveAndFlush(auditCaptor.capture());
+        assertThat(auditCaptor.getValue().getDescription()).contains("recordCount=9999");
     }
 
     @Test
@@ -157,4 +254,18 @@ class ActivityLogExportServiceTest {
                 .isInstanceOf(BusinessException.class)
                 .hasMessage("Chỉ Quản lý tổ chức (VT-02) mới được xuất nhật ký hoạt động.");
     }
+
+    @Test
+    void protectFormula_shouldSanitizeFormulaInjectionCases() {
+        assertThat(service.protectFormula("=SUM(A1:A10)")).isEqualTo("'=SUM(A1:A10)");
+        assertThat(service.protectFormula("+123")).isEqualTo("'+123");
+        assertThat(service.protectFormula("-123")).isEqualTo("'-123");
+        assertThat(service.protectFormula("@cmd")).isEqualTo("'@cmd");
+        assertThat(service.protectFormula(" =SUM(A1:A10)")).isEqualTo("' =SUM(A1:A10)");
+        assertThat(service.protectFormula("\t=cmd")).isEqualTo("'\t=cmd");
+        assertThat(service.protectFormula("\r+123")).isEqualTo("'\r+123");
+        assertThat(service.protectFormula("normal value")).isEqualTo("normal value");
+        assertThat(service.protectFormula(" Nguyễn Văn A")).isEqualTo(" Nguyễn Văn A");
+    }
 }
+
